overlays/dev/ingress-patch.yaml
# overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app
  annotations:
    # Base'deki annotation'ları da buraya eklemelisiniz, aksi takdirde silinirler.
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod # Prod ortamına özel issuer
spec:
  tls:
    - hosts:
        - app.dev.goxdev.lol
      secretName: tls-dev-my-app
  rules:
    - host: app.dev.goxdev.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-app
                port:
                  number: 80
